--- a/dev/App.module.css
+++ b/dev/App.module.css
@@ -1,4 +1,9 @@
 body {
-  padding: 0px;
   margin: 0px;
+  padding: 0px;
+}
+
+[data-active-pane='true'].pane {
+  background: yellow;
+  user-select: none;
 }
